--- a/HelloWorld.vcxproj.filters
+++ b/HelloWorld.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="System.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
