Shader class in place. Time to add file loading

--- a/HelloWorld.vcxproj
+++ b/HelloWorld.vcxproj
@@ -161,6 +161,10 @@
     <ClInclude Include="System.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\shader01.fs" />
+    <None Include="shaders\shader01.vs" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
