Adding stb_image and writing a Texture class.

--- a/HelloWorld.vcxproj
+++ b/HelloWorld.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="System.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
