--- a/HelloWorld.vcxproj
+++ b/HelloWorld.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="System.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -164,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="defines.h" />
     <ClInclude Include="FileReader.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="Texture.h" />
