--- a/HelloWorld.vcxproj
+++ b/HelloWorld.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -165,6 +166,8 @@
   <ItemGroup>
     <ClInclude Include="defines.h" />
     <ClInclude Include="FileReader.h" />
+    <ClInclude Include="Image.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="System.h" />
